change announcement header text

--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -35,7 +35,7 @@
         {
           "type": "text",
           "id": "text",
-          "default": "Welcome to our store",
+          "default": "TESTING STORE",
           "label": "t:sections.announcement-bar.blocks.announcement.settings.text.label"
         },
         {
